--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "concurrently": "^5.1.0"
   },
   "dependencies": {
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "react-icons": "^4.8.0"
   }
 }
