--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
     "graphql": "^16.3.0",
     "apollo-server-express": "^3.6.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.1.8"
+    "mongoose": "^6.1.8",
+    "stripe": "^8.67.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
