--- a/package.json
+++ b/package.json
@@ -19,5 +19,6 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.9.0",
-    "stripe": "^11.16.0",
+    "stripe": "^11.16.0"
+}
 }
