--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,9 @@
   "proxy": "http://localhost:3004",
   "dependencies": {
     "@apollo/client": "^3.5.8",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@stripe/stripe-js": "^1.3.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -17,8 +20,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^6.9.0",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4",
-    "@stripe/stripe-js": "^1.3.1"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
