added service worker

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -4,8 +4,14 @@
   "icons": [
     {
       "src": "maskable.png",
-      "sizes": "192x192",
-      "type": "image/png"
+      "sizes": "196x196",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "logo192.png",
+      "type": "image/png",
+      "sizes": "192x192"
     },
     {
       "src": "logo256.png",
@@ -23,7 +29,7 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": "index.html",
+  "start_url": "./index.html",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
